Updated styling of the about page

--- a/pages/about.html
+++ b/pages/about.html
@@ -29,16 +29,21 @@
 
     <header>
         <h2>PIVOT</h2>
+        <h3>From Education</h3>
     </header>
-    <div class="title">
-    <h1>Pivot From:</h1><h2>Education ♡</h2>
+
+    <div class="sidebar">
+      <h2>Our Founders</h2>
+      <h3>A'miyah</h3>
+      <h3>Chanel</h3>
+      <h3>Daisie</h3>
+      <h3>Paris</h3>
+      <h3>Skyla</h3>
     </div>
-    <hr>
-    <h2>Our Founders</h2>
-    <h3>A'miyah</h3>
-    <h3>Chanel</h3>
-    <h3>Daisie</h3>
-    <h3>Paris</h3>
-    <h3>Skyla</h3>
+
+    <main class="column is-10 has-text-centered">
+      <p>Details</p>
+    </main>
+    
   </body>
 </html>
