Fixing about page and styling

--- a/pages/about.html
+++ b/pages/about.html
@@ -32,18 +32,23 @@
         <h3>From Education</h3>
     </header>
 
-    <div class="sidebar">
-      <h2>Our Founders</h2>
-      <h3>A'miyah</h3>
-      <h3>Chanel</h3>
-      <h3>Daisie</h3>
-      <h3>Paris</h3>
-      <h3>Skyla</h3>
+    <div class="container">
+      <aside class="sidebar">
+        <h2>Our Founders</h2>
+        <h3>A'miyah</h3>
+        <h3>Chanel</h3>
+        <h3>Daisie</h3>
+        <h3>Paris</h3>
+        <h3>Skyla</h3>
+      </aside>
+
+      <main>
+        Details
+      </main>
     </div>
 
-    <main class="column is-10 has-text-centered">
-      <p>Details</p>
-    </main>
-    
   </body>
+
+  <script src="../script.js"></script>
+  
 </html>
