--- a/pages/about.html
+++ b/pages/about.html
@@ -16,30 +16,32 @@
 </head>
 
   <body>
-    <nav>
-        <!-- About page -->
-        <a href="./about.html"> ABOUT </a>
+    <div class="top">
+      <nav>
+          <!-- About page -->
+          <a href="./about.html"> ABOUT </a>
 
-        <!-- Resource page -->
-        <a href="./resources.html"> RESOURCES </a>
+          <!-- Resource page -->
+          <a href="./resources.html"> RESOURCES </a>
 
-        <!-- Contact page -->
-        <a href="./contact.html"> CONTACT </a>
-    </nav>
+          <!-- Contact page -->
+          <a href="./contact.html"> CONTACT </a>
+      </nav>
 
-    <header>
-        <h2>PIVOT</h2>
-        <h3>From Education</h3>
-    </header>
+      <header>
+          <h1>PIVOT From:</h1> 
+          <p>Education ♡</p>
+      </header>
+    </div>
 
     <div class="container">
       <aside class="sidebar">
         <h2>Our Founders</h2>
-        <h3>A'miyah</h3>
-        <h3>Chanel</h3>
-        <h3>Daisie</h3>
-        <h3>Paris</h3>
-        <h3>Skyla</h3>
+        <h3>♡ A'miyah</h3>
+        <h3>♡ Chanel</h3>
+        <h3>♡ Daisie</h3>
+        <h3>♡ Paris</h3>
+        <h3>♡ Skyla</h3>
       </aside>
 
       <main>
