--- a/pages/about.html
+++ b/pages/about.html
@@ -8,6 +8,13 @@
 
     <title>Pivot</title>
 
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+      integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
+      crossorigin="anonymous"
+    />
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Caveat+Brush&display=swap" rel="stylesheet">
@@ -28,9 +35,16 @@
           <a href="./contact.html"> CONTACT </a>
       </nav>
 
+      
+
       <header>
           <h1>PIVOT From:</h1> 
           <p>Education ♡</p>
+
+          <div class="search">
+          <input id="input" type="text"size="50px" placeholder="Search...">
+          <button type="submit" id="search"><i class="fas fa-search" style="color:#fff"></i></button>
+          </div>
       </header>
     </div>
 
@@ -45,7 +59,9 @@
       </aside>
 
       <main>
-        Details
+        <div class="content">
+            Details
+        </div>
       </main>
     </div>
 
