Last Update before hackthon

--- a/pages/resources.html
+++ b/pages/resources.html
@@ -121,7 +121,14 @@
 
       <main>
         <div class="content">
-            Details
+            <div class="course">
+                <h2>ITSC 1212 - Intro to CS I</h2>
+                <p>Credit Hours: 4</p>
+                <p>Introduction to basic computer literacy, computational thinking and problem-solving using a high level programming language. Programming concepts will be introduced and applied, including: operators; data types; variables, constants, and literals; expressions; control structures and program flow; basic data structures such as arrays, lists, and maps; defining and using functions; file input/output. This is an introductory programming course for non-CS majors and the first course for students interested in pursuing a computer science major or related minor.</p>
+                <button class="tags">Critical-Thinking</button>
+                <button class="tags">Python</button>
+                <button class="tags">Computational Thinking</button>
+            </div>
         </div>
       </main>
     </div>
